--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 
 <html>
-    <header>
-    </header>
+    <head>
+        <title>Rent a Book</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <header>
+            <div class = "header-left">
+                <a>RENT A BOOK</a>
+            </div>
+            <div class = "header-right">
+                <a>LOG IN</a>
+            </div>
+        </header>
+        <div class = "top">
+            <h1>Rent A Book</h1>
+        </div>
+    </body>
 </html>
