--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 
 <html>
     <head>
-        <title>Rent a Book</title>
+        <title>My Jobs</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link rel="stylesheet" href="responsive.css">
         <meta charset="utf-8">
     </head>
     <body>
         <header>
             <div class = "header-left">
-                <a>RENT A BOOK</a>
+                <a>My Jobs</a>
             </div>
             <div class = "header-right">
-                <a>LOG IN</a>
+                <a class = "header-menu">Home</a>
+                <a class = "header-menu">Jobs</a>
+                <a class = "header-menu">FAQ</a>
+                <a class = "header-menu">Sign In</a>
+                <a class = "header-menu sign-up">Sign Up</a>
             </div>
         </header>
-        <div class = "top">
-            <h1>Rent A Book</h1>
-        </div>
     </body>
 </html>
