--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>My Jobs</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="stylesheet" href="responsive.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <meta charset="utf-8">
     </head>
     <body>
@@ -12,6 +13,9 @@
             <div class = "header-left">
                 <a>My Jobs</a>
             </div>
+
+            <span class="fa fa-bars menu-icon"></span>
+
             <div class = "header-right">
                 <a class = "header-menu">Home</a>
                 <a class = "header-menu">Jobs</a>
@@ -19,6 +23,7 @@
                 <a class = "header-menu">Sign In</a>
                 <a class = "header-menu sign-up">Sign Up</a>
             </div>
+
         </header>
     </body>
 </html>
