--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 <a>My Jobs</a>
             </div>
 
-            <span class="fa fa-bars menu-icon"></span>
+            <div class = "menu-icon">
+                <span class="fa fa-bars"></span>
+            </div>
 
             <div class = "header-right">
                 <a class = "header-menu">Home</a>
