add extra content from January Indah

--- a/index.html
+++ b/index.html
@@ -43,5 +43,63 @@
                 </div>
             </div>
         </section>
+
+        <div class="content-wrapper">
+            <div class="container">
+                <h1>Jobs</h1>
+                <h2>Find a job that interests you</h2>
+                <div class="content-list">
+                    <p>Categories</p>
+                    <ul class="list">
+                    <a href="#" style="text-decoration:none"><li>Web Development</li></a>
+                    <a href="#" style="text-decoration:none"><li>Design Graphic</li></a>
+                    <a href="#" style="text-decoration:none"><li>Content Writer</li></a>
+                    <a href="#" style="text-decoration:none"><li>Desktop App</li></a>
+                    <a href="#" style="text-decoration:none"><li>Mobile App</li></a>
+                    </ul>
+                </div>
+                <div class="jobs">
+                    <div class="job">
+                        <div class="heading">
+                        <h2>Fullstack Developer</h2>
+                        <p>PT. Hello World</p>
+                        </div>
+                        <div class="subheading">
+                        <p><i class="fas fa-map-marked-alt"></i>Jakarta Selatan</p>
+                        <a href="#" style="text-decoration:none" class="text-location"><i class="fas fa-money-bill-wave"></i>Sign in to see salary</a>
+                        </div>
+                        <p class="text-contents">Job Description: Responsibility in designing user interaction on company website, developing servers and database so it funcionality. Proficient in front end coding.</p>
+                    </div>
+                    <div class="job">
+                        <div class="heading">
+                        <h2>Graphic Designer</h2>
+                        <p>PT. LOREM</p>
+                        </div>
+                        <div class="subheading">
+                        <p><i class="fas fa-map-marked-alt"></i>Surabaya</p>
+                        <a href="#" style="text-decoration:none" class="text-location"><i class="fas fa-money-bill-wave"></i>Sign in to see salary</a>
+                        </div>
+                        <p class="text-contents">Job Description: Creating visual concepts and branding for our product to inform and captivate our consumers.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="question-wrapper">
+            <div class="content">
+            <div class="head-title">
+                <img class="icon" src="C:\Users\USER\Documents\photo6339144315128884151-removebg-preview (1).png" align="center">
+                <h3>FAQ</h3>
+                <h4>Frequently Asked Question</h4>
+            </div>
+            <div class="question">
+                <p class="question-text">Q: Is it free?</p>
+                <p class="answer-text">A: Yes it's free</p>
+            </div>
+            <div class="question">
+                <p class="question-text">Q: How can I find a job here?</p>
+                <p class="answer-text">A: You can do that by searching the job, and to apply the job you must sign in first.</p>
+            </div>
+            </div>
+        </div>
     </body>
 </html>
