--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
 
         <footer>
-            <div class="container">
+            <div class="footer-container">
 
                 <div class="footer-item">
                     <h3>About</h3>
