add picture to faq

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <div class="question-wrapper">
             <div class="content">
             <div class="head-title">
+                <img class="icon" src="img\photo6339144315128884151-removebg-preview (1).png" align="center">
                 <h3>FAQ</h3>
                 <h4>Frequently Asked Question</h4>
             </div>
